crates/uitest/fixtures/ty_check/arg_count_mismatch.snap
---
source: crates/uitest/tests/ty_check.rs
expression: diags
input_file: fixtures/ty_check/arg_count_mismatch.fe
---
error[8-0023]: argument number mismatch
  ┌─ arg_count_mismatch.fe:7:8
  │
2 │ fn add(_ x: usize, _ y: usize) -> usize {
  │    --- function defined here
  ·
7 │     add(1)
  │        ^^^ expected 2 arguments, but 1 given

error[8-0023]: argument number mismatch
  ┌─ arg_count_mismatch.fe:9:8
  │
2 │ fn add(_ x: usize, _ y: usize) -> usize {
  │    --- function defined here
  ·
9 │     add(1, 2, 3)
  │        ^^^^^^^^^ expected 2 arguments, but 3 given

error[8-0033]: `add` is not a method
   ┌─ arg_count_mismatch.fe:24:5
   │
17 │     fn add(_ a: usize, _ b: usize) -> usize {
   │        --- function defined here
   ·
24 │     a.add(1)
   │     ^^^^^^^^
   │     │ │
   │     │ `add` is an associated function, not a method
   │     help: use associated function syntax instead: `Adder::add`
   │
   = note: to be used as a method, a function must have a `self` parameter

error[8-0033]: `add` is not a method
   ┌─ arg_count_mismatch.fe:25:5
   │
17 │     fn add(_ a: usize, _ b: usize) -> usize {
   │        --- function defined here
   ·
25 │     a.add(1, 2)
   │     ^^^^^^^^^^^
   │     │ │
   │     │ `add` is an associated function, not a method
   │     help: use associated function syntax instead: `Adder::add`
   │
   = note: to be used as a method, a function must have a `self` parameter
